[package]
name = "arbitrage-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
web3 = '0.19.0'
hex-literal = "0.4.1"
tokio = {version = "1.32.0", features = ["macros", "rt", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.105"
hex = "0.4.3"
secp256k1 = "0.27.0" 
tiny-keccak = "2.0.2"